# cartographer-string-diagrammatic-reasoning

./: README.md
cartographer/: ChangeLog.md  cartographer.cabal  cartographer.nix  release.nix  shell.nix
cartographer-core/: cabal.config  cartographer-core.cabal  cartographer-core.nix  default.nix  release.nix  shell.nix
cartographer-core/bench/: Main.hs
cartographer-core/profiling/: Main.hs
cartographer-core/results/: interleave.bench  interleave.prof  msum.bench  msum.prof
cartographer-core/src/Data/: Hypergraph.hs  TodoHypergraphFunctions.hs
cartographer-core/src/Data/Hypergraph/: Algebraic.hs  Examples.hs  Index.hs  Match.hs  Matching.hs  Permute.hs  PrettyPrint.hs  Rewrite.hs  Rewriting.hs  Search.hs  Traversal.hs  Type.hs  Unsafe.hs
cartographer-core/tests/: Test.hs
cartographer-core/tests/Data/Hypergraph/: Test.hs
cartographer-core/tests/Data/Hypergraph/Test/: Algebraic.hs  Arbitrary.hs  Match.hs  Rewriting.hs  Type.hs
cartographer-core/wiki/: ALGEBRAIC.md  MATCHING.md
cartographer-editor/: ChangeLog.md  LICENSE  cartographer-editor.cabal  cartographer-editor.nix  cartographer.nix  default.nix  nixpkgs.nix
cartographer-editor/html-src/: index.html  style.css
cartographer-editor/src/: Main.hs  Types.hs  View.hs
cartographer-editor/src/Cartographer/: Editor.hs  Preload.hs  UI.hs  Viewer.hs
cartographer-editor/src/Cartographer/Components/: Collapsible.hs  GeneratorEditor.hs  ProofAssistant.hs  ProofBuilder.hs  ProofWrapper.hs  RuleBuilder.hs  Sequence.hs  TheoryBuilder.hs  TheoryEditor.hs
cartographer-editor/src/Cartographer/Editor/: Model.hs  Types.hs  View.hs
cartographer-editor/src/Cartographer/Viewer/: Drawing.hs  Model.hs  Types.hs  View.hs
cartographer/src/Cartographer/: Draw.hs  Example.hs  Layout.hs  Proof.hs  State.hs
cartographer/src/Cartographer/Types/: Equivalence.hs  Grid.hs
cartographer/src/Data/: Equivalence.hs  Hypergraph.hs
cartographer/src/Data/Hypergraph/: Examples.hs  Layer.hs  Match.hs  Rewrite.hs  Traversal.hs  Type.hs
