-- helpful references:
-- profiling
--    * https://nikita-volkov.github.io/profiling-cabal-projects/
--    * cabal new-configure --enable-profiling --enable-library-profiling
--    * https://nixos.org/nixpkgs/manual/#how-to-build-with-profiling-enabled

name:                cartographer-core
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Data.Hypergraph
                 , Data.Hypergraph.Type
                 , Data.Hypergraph.Algebraic
                 , Data.Hypergraph.Unsafe
                 , Data.Hypergraph.Matching
                 , Data.Hypergraph.Index
                 --, Data.Hypergraph.Match
                 --, Data.Hypergraph.Rewrite
                 , Data.Hypergraph.Traversal
                 , Data.Hypergraph.Search
                 -- , Data.Hypergraph.Layer
                 -- , Data.Hypergraph.Examples
  -- other-extensions:    
  ghc-options:
    -O2
    -fprof-auto
  build-depends:       base, containers, bimap, logict, reflection
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Test.hs
  ghc-options:
    -O2
    -threaded
    -prof
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  other-modules:
    Data.Hypergraph.Test
    Data.Hypergraph.Test.Arbitrary
    Data.Hypergraph.Test.Type
    Data.Hypergraph.Test.Algebraic
    Data.Hypergraph.Test.Match
  build-depends:
      base
    , time
    , bimap
    , containers
    , tasty
    , QuickCheck
    , tasty-quickcheck
    , cartographer-core

executable profiling
  default-language: Haskell2010
  ghc-options:
    -O2
    -threaded
    -prof
    -fprof-auto
    -rtsopts
    "-with-rtsopts=-N -p -s -h -i0.1"
  hs-source-dirs:   profiling
  main-is:          Main.hs
  build-depends: base, bimap, cartographer-core, time
